--- a/css/style.css
+++ b/css/style.css
@@ -871,13 +871,13 @@ a {text-decoration: none;}
     }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 767px){
     .header__navigation {
         padding: .1rem 1rem;
     }
 
     .header__menu {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     .header__main {
@@ -900,7 +900,7 @@ a {text-decoration: none;}
 
     .header__btn-left,
     .header__btn-right {
-        width: 20%;
+        width: 30%;
     }
 
     .about__container {
@@ -927,7 +927,7 @@ a {text-decoration: none;}
     .about__box {
         justify-content: start;
         padding: 1rem;
-        flex-direction: row;
+        flex-direction: column;
     }
     
     .about__grid {
@@ -949,20 +949,22 @@ a {text-decoration: none;}
     }
     
     .form__text {
-        width: 42%;
+        width: 45%;
     }
+
+    .form__text:not(:first-child) { margin-left: .2rem; }
     
     .form__subject {
-        width: 87%;
+        width: 90%;
     }
     
     .form__textarea {
         display: block;
-        width: 87%;
+        width: 90%;
     }
     
     .form__btn {
-        width: 20%;
+        width: 30%;
         padding: .8rem;
     }
     
@@ -970,6 +972,10 @@ a {text-decoration: none;}
         position: relative;
         width: 100%;
         height: 25vh;
+    }
+
+    .active {
+        width: 70%;
     }
     
 }
@@ -1107,5 +1113,180 @@ a {text-decoration: none;}
         display: block;
         width: 30%;
         box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    }
+}
+
+@media screen and (max-width: 575px){
+    .header__container {
+        height: 110vh;
+    }
+
+    .header__navigation {
+        padding: .2rem 1rem;
+    }
+
+    .header__menu {
+        font-size: 1.8rem;
+    }
+
+    .header__logo {
+        margin-top: .5rem;
+    }
+
+    .header__main {
+        font-size: 1.8rem;
+    }
+
+    .header__countingList {
+        padding: 1rem;
+        font-size: 1rem;
+        margin: 1rem .5rem;
+    }
+
+    .heading__down {
+        position: absolute;
+        top: 70%;
+        left: 30%;
+    }
+
+    .header__countingNumbers {
+        font-size: 2.5rem;
+    }
+
+    .header__btn-left,
+    .header__btn-right {
+        width: 30%;
+        margin-top: 5rem;
+    }
+
+    .about__container {
+        margin-top: 4rem;
+        margin-bottom: 2rem;
+        width: 100%;
+    }
+    
+    .about__textBox {
+        text-align: center;
+    }
+    
+    .about__sub {
+        font-size: .8rem;
+    }
+    
+    .about__main {
+        font-size: 2rem;
+        margin: 1.2rem 0;
+    }
+    
+    .about__description {
+        font-size: .7rem;
+        width: 70%;
+        margin: 1.2rem auto;
+    }
+    
+    .about__box {
+        justify-content: start;
+        padding: 1rem 5rem;
+        flex-direction: column;
+    }
+    
+    .about__grid {
+        flex: 1;
+        height: 35vh;
+    }
+    
+    .about__grid:not(:first-child) { margin-top: 2rem; }
+    
+    .about__iconBox {
+        width: 3rem;
+        height: 3rem;
+        font-size: 1.6rem;
+        color: var(--color-white);
+        margin: .5rem auto;
+        padding: .5rem;
+    }
+    
+    .about__title {
+        font-size: 1.2rem;
+    }
+    
+    .about__info {
+        font-size: .7rem;
+        color: var(--text-color);
+        line-height: 1.8rem;
+    }
+    
+    
+    .form__box {
+        margin-top: 3rem;
+        margin-left: 5%;
+    }
+    
+    .form__input {
+        padding: .7rem;
+        font-size: .7rem;
+    }
+    
+    .form__text {
+        width: 46%;
+    }
+    
+    .form__subject {
+        width: 96%;
+    }
+    
+    .form__textarea {
+        display: block;
+        width: 96%;
+    }
+    
+    .form__btn {
+        width: 30%;
+        padding: .8rem;
+    }
+    
+    .footer {
+        position: relative;
+        width: 100%;
+        height: 25vh;
+    }
+    
+    .footer__iconBox {
+        display: inline-block;
+        width: 2rem;
+        height: 2rem;
+        font-size: 1rem;
+        padding-top: .4rem;
+    }
+    
+    .footer__link:not(:first-child) { margin-left: 1.2rem; }
+    
+    
+    .footer__copyright {
+        color: var(--color-white);
+        font-size: .6rem;
+    }
+    
+    .footer__copyright a {
+        color: var(--primary-color);
+    }
+    
+    .redirect {
+        position: absolute;
+        top: 40%;
+        right: 5%;
+        width: 3rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        color: var(--color-white);
+        padding-top: .5rem;
+    }
+
+    .active {
+        width: 70%;
+    }
+
+    .menu__link {
+        font-size: .9rem;
     }
 }
