--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #F3604C;
+    --primary-color: #F4472E;
     --color-white: #fff;
     --color-black: #000;
     --bg-color: #F2F2F2;
@@ -69,10 +69,11 @@ a {text-decoration: none;}
     width: 100%;
     display: flex;
     justify-content: space-around;
+    padding: 1rem 5rem;
 }
 
 .header__log {
-    width: 20%;
+    width: 10%;
 }
 
 .header__menu {
@@ -749,11 +750,17 @@ a {text-decoration: none;}
 
 @media screen and (min-width: 960px){
     .header__navigation {
-        padding: .1rem 1rem;
+        padding: 1rem 5rem;
+        height: 15vh;
+    }
+
+    .header__log {
+        width: 15%;
     }
 
     .header__menu {
         font-size: 2rem;
+        margin-top: -1rem;
     }
 
     .header__main {
@@ -807,7 +814,7 @@ a {text-decoration: none;}
     .about__box {
         justify-content: start;
         padding: 1rem 3rem;
-        flex-direction: row;
+        flex-direction: column;
     }
     
     .about__grid {
@@ -873,11 +880,17 @@ a {text-decoration: none;}
 
 @media screen and (max-width: 767px){
     .header__navigation {
-        padding: .1rem 1rem;
+        padding: 1rem 3rem;
+        height: 15vh;
+    }
+
+    .header__log {
+        width: 20%;
     }
 
     .header__menu {
         font-size: 1.8rem;
+        margin-top: -1rem;
     }
 
     .header__main {
@@ -987,13 +1000,18 @@ a {text-decoration: none;}
     .header__img {
         width: 30%;
     }
+
+    .header__navigation {
+        padding: 1rem 7rem;
+        height: 15vh;
+    }
     
     .header__log {
-        width: 22%;
+        width: 15%;
     }
     
     .header__menu {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
     
     .header__box {
@@ -1005,12 +1023,21 @@ a {text-decoration: none;}
         font-size: 3rem;
     }
     
+    .header__countingList {
+        font-size: 1.2rem;
+        margin-top: 2rem;
+    }
+
+    .header__countingNumbers {
+        font-size: 4rem;
+    }
     
     .header__button {
         position: absolute;
         top: 250%;
         width: 100%;
         text-align: center;
+        margin-top: 2rem;
     }
     
     .header__btn-left,
@@ -1051,10 +1078,14 @@ a {text-decoration: none;}
     }
     
     .about__info {
-        font-size: .7rem;
+        font-size: .8rem;
         color: var(--text-color);
         line-height: 1.8rem;
         text-align: center;
+    }
+
+    .form__container {
+        margin-top: 10rem;
     }
 
     .form__box {
@@ -1129,16 +1160,18 @@ a {text-decoration: none;}
     }
 
     .header__navigation {
-        padding: .2rem 1rem;
+        padding: 1.5rem 3rem;
+        height: 15vh;
     }
 
     .header__menu {
         font-size: 1.8rem;
+        margin-top: -1.5rem;
     }
 
-    .header__logo {
+    /* .header__logo {
         margin-top: .5rem;
-    }
+    } */
 
     .header__log {
         width: 22%;
@@ -1190,9 +1223,10 @@ a {text-decoration: none;}
     }
     
     .about__description {
-        font-size: .7rem;
+        font-size: .8rem;
         width: 100%;
         margin: 1.2rem auto;
+        padding: 0rem 1rem;
     }
     
     .about__box {
@@ -1223,9 +1257,10 @@ a {text-decoration: none;}
     }
     
     .about__info {
-        font-size: .7rem;
+        font-size: .8rem;
         color: var(--text-color);
         line-height: 1.8rem;
+        padding: 0rem 1rem;
     }
     
     
