--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --primary-color: #F4472E;
     --color-white: #fff;
     --color-black: #000;
-    --bg-color: #F2F2F2;
+    --bg-color: rgba(242, 242, 242, 0.5);
     --text-color: #333;
 }
 
@@ -30,8 +30,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 12px;
-    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    font-family: 'Nunito Sans', sans-serif;;
     font-weight: 400;
     position: relative;
 }
@@ -43,33 +43,21 @@ ul, li {
 a {text-decoration: none;}
 
 .header__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     width: 100%;
-    background-color: #000;
     position: relative;
-}
-
-.header__img {
-    width: 30%;
-}
-
-.header__overlay {
-    height: 100vh;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
+    background-image: url(../image/hero-area.jpg);
+    background-position: center;
+    background-size: cover;
+    /*background-color: red;*/
 }
 
 .header__navigation {
     width: 100%;
+    height: 10vh;
     display: flex;
     justify-content: space-around;
-    padding: 1rem 5rem;
+    padding: .8rem 5rem;
 }
 
 .header__log {
@@ -78,7 +66,6 @@ a {text-decoration: none;}
 
 .header__menu {
     font-size: 2.5rem;
-    padding-top: 1rem;
     color: var(--primary-color);
     cursor: pointer;
 }
@@ -88,7 +75,7 @@ a {text-decoration: none;}
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 3rem;
+    margin-top: 1rem;
     position: relative;
 }
 
@@ -97,15 +84,18 @@ a {text-decoration: none;}
 }
 
 .header__primary{ color: var(--primary-color); }
-
+.header__color {
+    color: var(--primary-color);
+    font-weight: 800;
+}
 .header__main {
     font-size: 3.5rem;
-    font-weight: 700;
+    font-weight: 800;
     color: var(--color-white);
 }
 
 .header__info {
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: var(--color-white);
     margin: 1.5rem 0;
 }
@@ -115,13 +105,20 @@ a {text-decoration: none;}
     top: 100%;
 }
 
-.header__countingList {
+.header__grid {
     display: inline-block;
-    padding: 1rem;
+    padding: 2rem;
+    background-color: rgba(250, 250, 250, 0.2);
+    text-align: center;
+    margin: 1rem 1.5rem;
+    border: 1px solid var(--color-white);
+    border-radius: 3px;
+}
+
+.header__countingList {
     font-size: 1.6rem;
     color: var(--color-white);
     font-family: inherit;
-    margin: 1rem 1.5rem;
     font-weight: 500;
 }
 
@@ -144,7 +141,7 @@ a {text-decoration: none;}
 .header__btn-right {
     width: 8%;
     padding: .8rem;
-    font-size: .8rem;
+    font-size: .9rem;
     text-transform: uppercase;
     font-family: inherit;
     font-weight: 500;
@@ -156,8 +153,7 @@ a {text-decoration: none;}
 }
 
 .header__btn-left {
-    background-color: transparent;
-    border: 1px solid var(--color-white);
+    background-color: var(--text-color);
 }
 
 .header__btn-left:hover { opacity: 0.75; }
@@ -170,9 +166,9 @@ a {text-decoration: none;}
 }
 
 .about__container {
-    margin-top: 4rem;
-    margin-bottom: 2rem;
+    padding-top: 5rem;
     width: 100%;
+    background-color: var(--bg-color);
 }
 
 .about__textBox {
@@ -180,13 +176,13 @@ a {text-decoration: none;}
 }
 
 .about__sub {
-    font-size: 1rem;
+    font-size: .9rem;
     color: var(--text-color);
 }
 
 .about__main {
     font-size: 2.5rem;
-    font-weight: 700;
+    font-weight: 600;
     color: var(--text-color);
     margin: 1.2rem 0;
 }
@@ -212,7 +208,7 @@ a {text-decoration: none;}
     width: 100%;
     justify-content: center;
     align-items: center;
-    padding: 1rem 8rem;
+    padding: 2rem 3rem;
     flex-direction: row;
 }
 
@@ -224,22 +220,23 @@ a {text-decoration: none;}
 .about__grid:not(:first-child) { margin-left: 1.5rem; }
 
 .about__iconBox {
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
     background-color: var(--primary-color);
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: var(--color-white);
     margin: .5rem auto;
-    padding: .7rem;
+    padding: .5rem;
 }
 
 .about__title {
-    font-size: 1.4rem;
-    font-weight: 700;
+    font-size: 1.5rem;
+    font-weight: 600;
     margin: 1.2rem 0;
     text-align: center;
+    color: var(--text-color);
 }
 
 .about__info {
@@ -253,7 +250,7 @@ a {text-decoration: none;}
     width: 100%;
     position: relative;
     background-color: var(--bg-color);
-    margin-top: 4rem;
+    /*margin-top: 4rem;*/
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
@@ -325,14 +322,14 @@ a {text-decoration: none;}
 
 .footer__iconBox {
     display: inline-block;
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
     background-color: var(--color-white);
     border-radius: 50%;
     text-align: center;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     color: var(--text-color);
-    padding-top: .5rem;
+    padding-top: .4rem;
 }
 
 .footer__link:not(:first-child) { margin-left: 1.2rem; }
@@ -354,17 +351,22 @@ a {text-decoration: none;}
 }
 
 .redirect {
-    position: absolute;
-    top: 40%;
-    right: 5%;
-    width: 4rem;
-    height: 4rem;
+    position: fixed;
+    top: 90%;
+    right: 2%;
+    width: 3rem;
+    height: 3rem;
     background-color: var(--primary-color);
     border-radius: 50%;
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.7rem;
     color: var(--color-white);
-    padding-top: .8rem;
+    padding-top: .5rem;
+    display: none;
+}
+
+.show-scroll {
+    display: block;
 }
 
 .menu__box {
@@ -373,7 +375,7 @@ a {text-decoration: none;}
     right: 0;
     width: 0%;
     height: 100%;
-    background-color: var(--bg-color);
+    background-color: var(--color-white);
     z-index: 3000;
     display: none;
     transition: all .5s linear;
@@ -424,170 +426,6 @@ a {text-decoration: none;}
 }
 
 /*================= Media Queries ==================================*/
-@media screen and (min-width: 576px){
-    .header__container {
-        height: 108vh;
-    }
-
-    .header__navigation {
-        padding: .2rem 1rem;
-    }
-
-    .header__menu {
-        font-size: 2rem;
-    }
-
-    .header__main {
-        font-size: 5rem;
-    }
-
-    .header__countingList {
-        padding: 1rem;
-        font-size: 1rem;
-        margin: 1rem .5rem;
-    }
-
-    .header__countingNumbers {
-        font-size: 2.5rem;
-    }
-
-    .header__btn-left,
-    .header__btn-right {
-        width: 25%;
-    }
-
-    .about__container {
-        margin-top: 4rem;
-        margin-bottom: 2rem;
-        width: 100%;
-    }
-    
-    .about__textBox {
-        text-align: center;
-    }
-    
-    .about__sub {
-        font-size: .8rem;
-    }
-    
-    .about__main {
-        font-size: 2rem;
-        margin: 1.2rem 0;
-    }
-    
-    .about__description {
-        font-size: .7rem;
-        width: 70%;
-        margin: 1.2rem auto;
-    }
-    
-    .about__box {
-        justify-content: start;
-        padding: 1rem 5rem;
-        flex-direction: column;
-    }
-    
-    .about__grid {
-        flex: 1;
-        height: 35vh;
-    }
-    
-    .about__grid:not(:first-child) { margin-top: 2rem; }
-    
-    .about__iconBox {
-        width: 3rem;
-        height: 3rem;
-        font-size: 1.6rem;
-        color: var(--color-white);
-        margin: .5rem auto;
-        padding: .5rem;
-    }
-    
-    .about__title {
-        font-size: 1.2rem;
-    }
-    
-    .about__info {
-        font-size: .7rem;
-        color: var(--text-color);
-        line-height: 1.8rem;
-    }
-    
-    
-    .form__box {
-        margin-top: 3rem;
-        margin-left: 5%;
-    }
-    
-    .form__input {
-        padding: .7rem;
-        font-size: .7rem;
-    }
-    
-    .form__text {
-        width: 46%;
-    }
-    
-    .form__subject {
-        width: 96%;
-    }
-    
-    .form__textarea {
-        display: block;
-        width: 96%;
-    }
-    
-    .form__btn {
-        width: 30%;
-        padding: .8rem;
-    }
-    
-    .footer {
-        position: relative;
-        width: 100%;
-        height: 25vh;
-    }
-    
-    .footer__iconBox {
-        display: inline-block;
-        width: 2rem;
-        height: 2rem;
-        font-size: 1rem;
-        padding-top: .4rem;
-    }
-    
-    .footer__link:not(:first-child) { margin-left: 1.2rem; }
-    
-    
-    .footer__copyright {
-        color: var(--color-white);
-        font-size: .6rem;
-    }
-    
-    .footer__copyright a {
-        color: var(--primary-color);
-    }
-    
-    .redirect {
-        position: absolute;
-        top: 40%;
-        right: 5%;
-        width: 3rem;
-        height: 3rem;
-        font-size: 1.5rem;
-        color: var(--color-white);
-        padding-top: .5rem;
-    }
-
-    .active {
-        width: 50%;
-    }
-
-    .menu__link {
-        font-size: .9rem;
-    }
-}
-
 @media screen and (min-width: 768px){
     .header__navigation {
         padding: .2rem 1rem;
@@ -1152,28 +990,23 @@ a {text-decoration: none;}
 
 @media screen and (max-width: 575px){
     .header__container {
-        height: 100vh;
-    }
-
-    .header__img {
-        width: 50%;
+        height: 160vh;
     }
 
     .header__navigation {
-        padding: 1.5rem 3rem;
-        height: 15vh;
+        padding: 1.5rem 2rem;
+        height: 10vh;
     }
 
     .header__menu {
         font-size: 1.8rem;
-        margin-top: -1.5rem;
     }
 
-    /* .header__logo {
-        margin-top: .5rem;
-    } */
+    .header__logo {
+        margin-top: -1rem;
+    }  
 
-    .header__log {
+     .header__log {
         width: 22%;
     }
 
@@ -1181,15 +1014,25 @@ a {text-decoration: none;}
         font-size: 1.8rem;
     }
 
-    .header__countingList {
-        padding: 1rem;
+    .header__info {
         font-size: 1rem;
+        width: 80%;
+        margin: 1.2rem auto;
+        line-height: 2rem;
+    }
+
+    .header__countingList {
+        font-size: 1rem;
+    }
+
+    .header__grid {
+        padding: .1rem;
         margin: 1rem .5rem;
     }
 
     .heading__down {
         position: absolute;
-        top: 70%;
+        top: 98%;
         left: 30%;
     }
 
@@ -1200,13 +1043,12 @@ a {text-decoration: none;}
     .header__btn-left,
     .header__btn-right {
         width: 30%;
-        margin-top: 5rem;
+        margin-top: 1rem;
     }
 
     .about__container {
-        margin-top: 4rem;
-        margin-bottom: 2rem;
         width: 100%;
+        margin-top: -3rem;
     }
     
     .about__textBox {
@@ -1263,9 +1105,11 @@ a {text-decoration: none;}
         padding: 0rem 1rem;
     }
     
+    .form__container {
+        margin-top: -10rem;
+    }
     
     .form__box {
-        margin-top: 3rem;
         margin-left: 5%;
     }
     
@@ -1335,5 +1179,169 @@ a {text-decoration: none;}
 
     .menu__link {
         font-size: .8rem;
+    }
+}
+
+@media screen and (min-width: 576px){
+    .header__container {
+        height: 108vh;
+    }
+
+    .header__navigation {
+        padding: .2rem 1rem;
+    }
+
+    .header__menu {
+        font-size: 2rem;
+    }
+
+    .header__main {
+        font-size: 5rem;
+    }
+
+    .header__countingList {
+        padding: 1rem;
+        font-size: 1rem;
+        margin: 1rem .5rem;
+    }
+
+    .header__countingNumbers {
+        font-size: 2.5rem;
+    }
+
+    .header__btn-left,
+    .header__btn-right {
+        width: 25%;
+    }
+
+    .about__container {
+        margin-top: 4rem;
+        margin-bottom: 2rem;
+        width: 100%;
+    }
+    
+    .about__textBox {
+        text-align: center;
+    }
+    
+    .about__sub {
+        font-size: .8rem;
+    }
+    
+    .about__main {
+        font-size: 2rem;
+        margin: 1.2rem 0;
+    }
+    
+    .about__description {
+        font-size: .7rem;
+        width: 70%;
+        margin: 1.2rem auto;
+    }
+    
+    .about__box {
+        justify-content: start;
+        padding: 1rem 5rem;
+        flex-direction: column;
+    }
+    
+    .about__grid {
+        flex: 1;
+        height: 35vh;
+    }
+    
+    .about__grid:not(:first-child) { margin-top: 2rem; }
+    
+    .about__iconBox {
+        width: 3rem;
+        height: 3rem;
+        font-size: 1.6rem;
+        color: var(--color-white);
+        margin: .5rem auto;
+        padding: .5rem;
+    }
+    
+    .about__title {
+        font-size: 1.2rem;
+    }
+    
+    .about__info {
+        font-size: .7rem;
+        color: var(--text-color);
+        line-height: 1.8rem;
+    }
+    
+    
+    .form__box {
+        margin-top: 3rem;
+        margin-left: 5%;
+    }
+    
+    .form__input {
+        padding: .7rem;
+        font-size: .7rem;
+    }
+    
+    .form__text {
+        width: 46%;
+    }
+    
+    .form__subject {
+        width: 96%;
+    }
+    
+    .form__textarea {
+        display: block;
+        width: 96%;
+    }
+    
+    .form__btn {
+        width: 30%;
+        padding: .8rem;
+    }
+    
+    .footer {
+        position: relative;
+        width: 100%;
+        height: 25vh;
+    }
+    
+    .footer__iconBox {
+        display: inline-block;
+        width: 2rem;
+        height: 2rem;
+        font-size: 1rem;
+        padding-top: .4rem;
+    }
+    
+    .footer__link:not(:first-child) { margin-left: 1.2rem; }
+    
+    
+    .footer__copyright {
+        color: var(--color-white);
+        font-size: .6rem;
+    }
+    
+    .footer__copyright a {
+        color: var(--primary-color);
+    }
+    
+    .redirect {
+        position: absolute;
+        top: 40%;
+        right: 5%;
+        width: 3rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        color: var(--color-white);
+        padding-top: .5rem;
+    }
+
+    .active {
+        width: 50%;
+    }
+
+    .menu__link {
+        font-size: .9rem;
     }
 }
