--- a/css/style.css
+++ b/css/style.css
@@ -1185,25 +1185,50 @@ a {text-decoration: none;}
 
 @media screen and (min-width: 576px){
     .header__container {
-        height: 108vh;
+        height: 100vh;
     }
 
     .header__navigation {
-        padding: .2rem 1rem;
+        padding: 1.5rem 2rem;
+        height: 10vh;
     }
 
     .header__menu {
-        font-size: 2rem;
+        font-size: 1.8rem;
+    }
+
+    .header__logo {
+        margin-top: -1rem;
+    }  
+
+     .header__log {
+        width: 22%;
     }
 
     .header__main {
-        font-size: 5rem;
+        font-size: 1.8rem;
+    }
+
+    .header__info {
+        font-size: 1rem;
+        width: 80%;
+        margin: 1.2rem auto;
+        line-height: 2rem;
     }
 
     .header__countingList {
-        padding: 1rem;
         font-size: 1rem;
+    }
+
+    .header__grid {
+        padding: .1rem;
         margin: 1rem .5rem;
+    }
+
+    .heading__down {
+        position: absolute;
+        top: 98%;
+        left: 30%;
     }
 
     .header__countingNumbers {
@@ -1212,13 +1237,14 @@ a {text-decoration: none;}
 
     .header__btn-left,
     .header__btn-right {
-        width: 25%;
+        width: 30%;
+        margin-top: 1rem;
+        font-size: .8rem;
     }
 
     .about__container {
-        margin-top: 4rem;
-        margin-bottom: 2rem;
         width: 100%;
+        margin-top: -3rem;
     }
     
     .about__textBox {
@@ -1230,19 +1256,20 @@ a {text-decoration: none;}
     }
     
     .about__main {
-        font-size: 2rem;
+        font-size: 1.1rem;
         margin: 1.2rem 0;
     }
     
     .about__description {
-        font-size: .7rem;
-        width: 70%;
+        font-size: .8rem;
+        width: 100%;
         margin: 1.2rem auto;
+        padding: 0rem 1rem;
     }
     
     .about__box {
         justify-content: start;
-        padding: 1rem 5rem;
+        padding: 1rem;
         flex-direction: column;
     }
     
@@ -1252,6 +1279,7 @@ a {text-decoration: none;}
     }
     
     .about__grid:not(:first-child) { margin-top: 2rem; }
+    .about__grid:not(:first-child) { margin-left: -1rem;}
     
     .about__iconBox {
         width: 3rem;
@@ -1263,18 +1291,21 @@ a {text-decoration: none;}
     }
     
     .about__title {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     
     .about__info {
-        font-size: .7rem;
+        font-size: .8rem;
         color: var(--text-color);
         line-height: 1.8rem;
+        padding: 0rem 1rem;
     }
     
+    .form__container {
+        margin-top: -10rem;
+    }
     
     .form__box {
-        margin-top: 3rem;
         margin-left: 5%;
     }
     
@@ -1297,7 +1328,7 @@ a {text-decoration: none;}
     }
     
     .form__btn {
-        width: 30%;
+        width: 40%;
         padding: .8rem;
     }
     
@@ -1339,7 +1370,7 @@ a {text-decoration: none;}
     }
 
     .active {
-        width: 50%;
+        width: 70%;
     }
 
     .menu__link {
